# rust-biosim

./: .gitignore  .gitlab-ci.yml  Cargo.toml  TODO.md
cargo/: config.toml
src/: brain_vis.rs  genome.rs  lib.rs  main.rs  neural_network.rs  settings.rs  specimen.rs  state.rs
tests/: systems.rs
