[package]
name = "evolution"
version = "0.1.0"
edition = "2024"
default-run = "evolution"

[dependencies]
parry2d = "0.18"
bit-vec = "0.8"
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
rand = "0.9"
once_cell = "1"
variant_count = "1"
bevy = "0.15"
bevy_prototype_lyon = "0.13"
ndarray = "0.16"
nalgebra = "0.33"
rayon = "1"
tracing = "0.1"
tracing-subscriber = "0.3"