[package]
name = "evolution"
version = "0.1.0"
edition = "2024"
default-run = "evolution"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
parry2d = "0.25"
bit-vec = "0.8"
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
rand = "0.9"
once_cell = "1"
variant_count = "1"
bevy = { version = "0.17", features = ["dynamic_linking"] }
bevy_vector_shapes = "0.11.0"
ndarray = "0.17"
nalgebra = "0.34"
rayon = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
kiddo = "5.2"
